--- a/index/main.html
+++ b/index/main.html
@@ -125,12 +125,12 @@
 
           </div>
           <div style="flex:1"></div>
-          <div style="width:40px;height:50px;text-align: center;line-height: 80px;">
-              <i id="turn-bottom-theme" class="material-icons" style="color: #d0d0d0;font-size: 28px;cursor: pointer;" onclick="changeTheme()" >chevron_right</i>
-              <i id="turn-left-theme" class="material-icons" style="color: #d0d0d0;font-size: 28px;cursor: pointer;" onclick="changeTheme()" >
-                  chevron_left
-              </i>
-          </div>
+          <!--<div style="width:40px;height:50px;text-align: center;line-height: 80px;">-->
+              <!--<i id="turn-bottom-theme" class="material-icons" style="color: #d0d0d0;font-size: 28px;cursor: pointer;" onclick="changeTheme()" >chevron_right</i>-->
+              <!--<i id="turn-left-theme" class="material-icons" style="color: #d0d0d0;font-size: 28px;cursor: pointer;" onclick="changeTheme()" >-->
+                  <!--chevron_left-->
+              <!--</i>-->
+          <!--</div>-->
       </div>
   </div>
 
