--- a/recent/recent.html
+++ b/recent/recent.html
@@ -52,7 +52,7 @@
 <div class="content">
     <div style="height:100%;width:200px;display: flex;flex-direction: column;align-items: center;overflow: hidden">
         <div class="title" style="" >消息
-            <i class="material-icons" style="" onclick="addGroup()">group_add</i>
+            <!--<i class="material-icons" style="" onclick="addGroup()">group_add</i>-->
         </div>
 
         <div id="recent" style="width:200px;flex:1;display: flex;flex-direction: column;align-items: center;border-right: 1px solid #d0d0d0;">
