--- a/index/index.html
+++ b/index/index.html
@@ -57,36 +57,32 @@
     })
 
 
-//    var notifyNewMsg = function (id) {
-//        ipc.send("messageReceive",{total:Store.getTotalNewMSgNum()});
-//
-//        const notification = {
-//            title: "新消息",
-//            body: Store.getFriend(id).name+"发来新的消息，请注意查收"
-//        }
-//        const myNotification = new window.Notification(notification.title, notification);
-//    }
-//    var notifyNewGroupMsg = function (gid) {
-//        ipc.send("messageReceive",{total:Store.getTotalNewMSgNum()});
-//        const notification = {
-//            title: "群消息",
-//            body: Store.getGroup(gid).name+"有新消息，请注意查收"
-//        }
-//        const myNotification = new window.Notification(notification.title, notification);
-//    }
-//    var notifyReadMsg = function () {
-//        ipc.send("messageRead",{total:Store.getTotalNewMSgNum()});
-//    }
-//    window.top.Store.on("receiveMessage",notifyNewMsg);
-//    window.top.Store.on("readChatRecords",notifyReadMsg);
-//    window.top.Store.on("readGroupChatRecords",notifyReadMsg);
-//    window.top.Store.on("receiveGroupMessage",notifyNewGroupMsg);
-//
-//    var checkVersion = function () {
-//        window.top.ipc.send("upgrade-request",{toIndexIFNot:false});
-//    }
-//    window.top.WSChannel.on("afterLogin",checkVersion);
-//
+    var notifyNewMsg = function (id) {
+        engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
+            ipc.send("messageReceive",{total:num});
+
+            const notification = {
+                title: "新消息",
+                body: "您有新的LK消息，请注意查收"
+            }
+            const myNotification = new window.Notification(notification.title, notification);
+        })
+
+    }
+
+    var notifyReadMsg = function () {
+        engine.getChatManager().asyGetAllMsgNotReadNum().then(function (num) {
+            ipc.send("messageRead", {total: num});
+        })
+    }
+    engine.getChatManager().on("msgReceived",notifyNewMsg);
+    engine.getChatManager().on("msgRead",notifyReadMsg);
+
+    var checkVersion = function () {
+        window.top.ipc.send("upgrade-request",{toIndexIFNot:false});
+    }
+    LKApplication.getCurrentApp().on("currentUserChanged",checkVersion);
+
 //    window.top.Store.on("receiveMKFriends",function(name){
 //        const notification = {
 //            title: '好友申请',
