--- a/recent/recent.html
+++ b/recent/recent.html
@@ -53,8 +53,7 @@
     <div style="height:100%;width:200px;display: flex;flex-direction: column;align-items: center;overflow: hidden">
         <div class="title" style="" >消息
         </div>
-
-        <div id="recent" style="width:200px;flex:1;display: flex;flex-direction: column;align-items: center;border-right: 1px solid #d0d0d0;">
+        <div id="recent" style="width:200px;flex:1;overflow: auto;border-right: 1px solid #d0d0d0;">
         </div>
     </div>
     <div style="flex:1;height:100%;display: flex">
