--- a/contact/contact.html
+++ b/contact/contact.html
@@ -55,7 +55,7 @@
             <!--<i class="material-icons" style="font-size: 20px;float: right;cursor: pointer;margin-top: 4px;margin-right: -2px;color:#000" onclick="request()">compare_arrows</i>-->
             <!--<i class="material-icons" style="font-size: 20px;float:right;cursor: pointer;margin-top: 4px;margin-right: 10px;color:#000" onclick="addFriend()">add</i>-->
         <!--</div>-->
-        <div id="contact" style="width:200px;flex:1;display: flex;flex-direction: column;align-items: center;border-right: 1px solid #d0d0d0;">
+        <div id="contact" style="width:200px;flex:1;overflow: auto;border-right: 1px solid #d0d0d0;">
         </div>
     </div>
     <div style="flex:1;height:100%;background-color: white;display: flex">
