--- a/contact/detail.html
+++ b/contact/detail.html
@@ -14,27 +14,48 @@
             height: 100%;
             overflow: hidden;
             font-family: sans-serif;
-            background-color:#f0f0f0;
+            background-color: #f0f0f0;
             font-size: 10pt;
         }
-        .left .title{
+
+        .left .title {
             display: none;
         }
-        .bottom .title{
-            width:100%;height:30px;background-color: #636363;line-height: 30px;color:white;padding-left: 20px
+
+        .bottom .title {
+            width: 100%;
+            height: 30px;
+            background-color: #636363;
+            line-height: 30px;
+            color: white;
+            padding-left: 20px
         }
     </style>
 </head>
 <body>
-<div class="title" >
-    <span id="title" ></span>
+<div class="title">
+    <span id="title"></span>
 </div>
-<div style="width:100%;height:100%;display:flex;flex-direction: column;justify-content: center;align-items: center;margin-top: 10px">
-    <div style="width:96px;height:96px;border: 1px solid #d0d0d0;border-radius: 48px;overflow: hidden;text-align: center;line-height: 96px" id="name"></div>
-    <div id="id" style="margin-top: 40px"></div>
+<div style="width:100%;height:100%;display:flex;flex-direction: column;justify-content: center;align-items: center;margin-top: 10px;">
+    <div style="position: absolute;right:90px;top:80px;"><img style="width:70px;height:70px;border-radius:100px;" id="pic"
+                                                              />
+    </div>
+    <div style="position: absolute;left:90px;top:100px; font-size: 20px;font-weight:bold;width: 230px;height: 70px"
+         id="name"></div>
+    <div style="position: absolute;left:90px;top:180px;right:90px;">
+        <hr style="height:1px;border:none;border-top:1px solid #d0d0d0;"/>
+    </div>
+    <div style="width:96px;height:96px;white-space:nowrap;  text-align: center;line-height: 36px;margin-top: 40px">
+        <div style="position: absolute;left:90px;top:200px;width: 230px;height: 70px">
+            <span style="color: #a0a0a0;font-weight: bold">标识：</span>
+            <span id="id"></span>
+        </div>
+
+    </div>
     <div id="members" style="margin-top: 40px"></div>
-    <div style="width:300px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #d0d0d0;line-height: 40px;margin-top: 40px;cursor: pointer;background-color: #f0f0f0" onclick="sendMessage()">
-        发消息
+    <div  style="width:150px;height:40px;border-radius: 5px;text-align: center;border: 1px solid #24A62F;line-height: 40px;margin-top: 150px;cursor: pointer;background-color:#24A62F"
+         onclick="sendMessage()">
+        <span style="color: white;font-weight: bold">发消息</span>
     </div>
     <div style="height:50%"></div>
 </div>
@@ -42,38 +63,40 @@
     document.body.className = window.top.theme;
     const {engine} = window.top
     const ChatManager = engine.get('ChatManager')
-    var ps = document.location.href.substring(document.location.href.indexOf("?")+1);
+    var ps = document.location.href.substring(document.location.href.indexOf("?") + 1);
     var params = ps.split("&");
-    // console.log({params})
+     console.log({params})
     var id = document.getElementById("id").innerHTML = params[0];
-    var name = document.getElementById("title").innerHTML=document.getElementById("name").innerHTML = decodeURI(params[1]);
-    var isGroup = params[2]=="true";
+    var name = document.getElementById("title").innerHTML = document.getElementById("name").innerHTML = decodeURI(params[1]);
+    var isGroup = params[2] == "true";
     // console.log({isGroup})
-
+    console.log(decodeURI(params[1]))
+       //
+    document.getElementById("pic").src = params[3]!=='null'?params[3] :'../images/traceless.png'
     start()
 
     async function start() {
-      if(isGroup){
-        var html="";
-        var all = await ChatManager.asyGetGroupMembers(id)
-        // console.log({all})
-        for(var i=0;i<all.length;i++){
-            var m = all[i];
-            html += "<div style=\"width:100%;display:flex;flex-direction: row;justify-content: flex-start;align-items: center;margin-top: 10px\">";
-            html+="<div style=\"width:80px;overflow: hidden\">";
-            html+=m.name;
-            html+="</div><div style=\"width:300px\">";
-            html+=m.id;
-            html+="</div>";
-            html+="</div>";
+        if (isGroup) {
+            var html = "";
+            var all = await ChatManager.asyGetGroupMembers(id)
+            // console.log({all})
+            for (var i = 0; i < all.length; i++) {
+                var m = all[i];
+                html += "<div style=\"width:100%;display:flex;flex-direction: row;justify-content: flex-start;align-items: center;margin-top: 10px\">";
+                html += "<div >";
+                html += m.name;
+                html += "</div><div style=\"width:300px\">";
+                html += m.id;
+                html += "</div>";
+                html += "</div>";
+            }
+            document.getElementById("members").innerHTML = html;
         }
-        document.getElementById("members").innerHTML=html;
-      }
     }
 
     async function sendMessage() {
-      await ChatManager.asyEnsureSingleChat(id)
-        document.location.href = "../recent/chat.html?"+isGroup+"&"+id;//isGroupChat&id
+        await ChatManager.asyEnsureSingleChat(id)
+        document.location.href = "../recent/chat.html?" + isGroup + "&" + id;//isGroupChat&id
     }
 </script>
 </body>
